--- a/FoodDeliveryFrontEnd/src/components/Header/Header.css
+++ b/FoodDeliveryFrontEnd/src/components/Header/Header.css
@@ -2,6 +2,7 @@
     height: 34vw;
     margin:30px auto;
     background: url('../../assets/header_img.png') no-repeat;
+    /* background: url('https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg?cs=srgb&dl=pexels-pixabay-260922.jpg&fm=jpg') no-repeat; */
     background-size: contain;
     position: relative;
 }
