--- a/FoodDeliveryFrontEnd/src/components/RestaurantCard/RestaurantCard.css
+++ b/FoodDeliveryFrontEnd/src/components/RestaurantCard/RestaurantCard.css
@@ -1,14 +1,27 @@
-.restaurant-details{
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 6px;
-    border-radius: 50px;
-    background-color: white;
+.restaurant-details img{
+    width: 300px;
+    height: 150px;
+    border-radius: 20px;
+    padding: 5px;
 }
-.restaurant-image img{
-    width: 200px;
+.restaurant-details{
+    background-color: rgba(225, 225, 225, 0.814);
+    width: 300px;
+    height: 380px;
+    border-radius: 20px;
+    color: white;
+    margin: auto;
+    box-shadow:  0px 0px 10px #00000015;
+    transition: 0.3s;
+    animation: fadeIn 1s;
+}
+.restaurant-details h1{
+    color: black;
+    font-size: 25px;
+    padding: 10px;
+}
+.restaurant-details p{
+    color: rgb(86, 86, 86);
+    font-size: 20px;
+    margin: 10px;
 }
