--- a/FoodDeliveryFrontEnd/src/components/Login/LoginPopup.css
+++ b/FoodDeliveryFrontEnd/src/components/Login/LoginPopup.css
@@ -1,9 +1,9 @@
 .login-popup{
-    position: absolute;
+    /* position: absolute;
     z-index: 1;
     width: 100%;
-    height: 100%;
-    background-color: rgba(255, 111, 0, 0.3);
+    height: 100%; */
+    background-color: rgba(255, 255, 255, 0.3);
     
     display: grid;
 }
