Login and Register and Restaurant Display Complete
Integration Works are Going, Login and Registration Completed  and Restaurant Display Completed

--- a/FoodDeliveryFrontEnd/src/components/Nav/Navbar.css
+++ b/FoodDeliveryFrontEnd/src/components/Nav/Navbar.css
@@ -35,6 +35,10 @@
     transition: 0.3s;
 }
 
+.navbar button Link{
+    text-decoration: none;
+}
+
 .navbar button:hover{
     background-color: red;
 }
