--- a/FoodDeliveryFrontEnd/src/components/ResCard/ResCard.css
+++ b/FoodDeliveryFrontEnd/src/components/ResCard/ResCard.css
@@ -1,13 +1,17 @@
 .rescard img{
+    /* width: 300px;
+    height: 150px;
+    border-radius: 20px;
+    padding: 5px; */
     width: 300px;
     height: 150px;
     border-radius: 20px;
     padding: 5px;
 }
 .rescard h1{
-    color: black;
+    /* color: black;
     font-size: 25px;
-    padding: 10px;
+    padding: 10px; */
 }
 .rescard {
     background-color: rgba(225, 225, 225, 0.814);
@@ -19,4 +23,7 @@
     box-shadow:  0px 0px 10px #00000015;
     transition: 0.3s;
     animation: fadeIn 1s;
+    color: rgb(0, 0, 0); 
+    font-size: 20px;
+    margin: 10px;
 }
