--- a/FoodDeliveryFrontEnd/src/components/ResCard/ResCard.css
+++ b/FoodDeliveryFrontEnd/src/components/ResCard/ResCard.css
@@ -3,10 +3,12 @@
     height: 150px;
     border-radius: 20px;
     padding: 5px; */
-    width: 300px;
+    /* width: 300px;
     height: 150px;
     border-radius: 20px;
-    padding: 5px;
+    padding: 5px; */
+    width: 100%;
+    border-radius: 15px 15px 0px 0px;
 }
 .rescard h1{
     /* color: black;
@@ -14,16 +16,32 @@
     padding: 10px; */
 }
 .rescard {
-    background-color: rgba(225, 225, 225, 0.814);
+    /* background-color: rgba(225, 225, 225, 0.814);
     width: 300px;
     height: 380px;
     border-radius: 20px;
-
+    
     margin: auto;
     box-shadow:  0px 0px 10px #00000015;
     transition: 0.3s;
     animation: fadeIn 1s;
     color: rgb(0, 0, 0); 
     font-size: 20px;
-    margin: 10px;
+    margin: 10px; */
+    
+    width: 100%;
+    margin: auto;
+    border-radius: 15px;
+    box-shadow:  0px 0px 10px #00000015;
+    transition: 0.3s;
+    animation: fadeIn 1s;
+}
+.res-info{
+    padding: 20px;
+}
+.res-info h3{
+    font-size: 20px;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+   
 }
